# esp32-web

./: .gitignore  CMakeLists.txt  Makefile  sdkconfig.defaults.esp32c6
.github/instructions/: architecture.instructions.md
docs/: architecture.md  target-profiles.md
main/: CMakeLists.txt  app_wifi_config.h.in  idf_component.yml  main.cpp
main/internal/: board_profile.cpp  board_profile.h  gpio_runtime.cpp  gpio_runtime.h
main/web/: app.js  index.html  styles.css
main/web_dist/: app.js  index.html  styles.css
tools/: minify_web_assets.py  setup_local_env.py
